force-app/main/default/objects/Big_Boost__c/Big_Boost__c.object-meta.xml
<CustomObject>
    <label>Big Boost</label>
    <nameField>
        <label>Big Boost Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Big Boosts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>