force-app/main/default/objects/Big_Boost__c/fields/CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CNPJ__c</fullName>
    <description>In BigBoost query this is the &quot;q&quot; parameter.</description>
    <label>CNPJ</label>
    <length>20</length>
    <type>Text</type>
</CustomField>