force-app/main/default/objects/Big_Boost__c/fields/Dataset__c.field-meta.xml
<CustomField>
    <fullName>Dataset__c</fullName>
    <label>Dataset</label>
    <type>TextArea</type>
</CustomField>