force-app/main/default/objects/Big_Boost__c/fields/KYC__c.field-meta.xml
<CustomField>
    <fullName>KYC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KYC</label>
    <referenceTo>KYC__c</referenceTo>
    <relationshipLabel>Big Boosts</relationshipLabel>
    <relationshipName>Big_Boosts</relationshipName>
    <type>Lookup</type>
</CustomField>