force-app/main/default/objects/Big_Boost__c/fields/Query_Id__c.field-meta.xml
<CustomField>
    <fullName>Query_Id__c</fullName>
    <description>This is the Id returned by BigBoost to identify requests.</description>
    <label>Query Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>