force-app/main/default/objects/Big_Boost__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>KYC__c</columns>
    <columns>CNPJ__c</columns>
    <columns>Dataset__c</columns>
    <columns>Query_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>