force-app/main/default/objects/Big_Boost__c/listViews/CEO_Big_Boost.listView-meta.xml
<ListView>
    <fullName>CEO_Big_Boost</fullName>
    <filterScope>Queue</filterScope>
    <label>CEO</label>
    <queue>CEO</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>