force-app/main/default/objects/Big_Boost__c/listViews/Director_Big_Boost.listView-meta.xml
<ListView>
    <fullName>Director_Big_Boost</fullName>
    <filterScope>Queue</filterScope>
    <label>Director</label>
    <queue>Director</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>