force-app/main/default/objects/Big_Boost__c/listViews/Legal_Compliance_Big_Boost.listView-meta.xml
<ListView>
    <fullName>Legal_Compliance_Big_Boost</fullName>
    <filterScope>Queue</filterScope>
    <label>Legal &amp; Compliance</label>
    <queue>Legal_Compliance</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>